style(combo): make sure that the jumping fix is only for the outlined variant

--- a/src/components/combo/themes/light/combo.material.scss
+++ b/src/components/combo/themes/light/combo.material.scss
@@ -13,7 +13,7 @@
     }
 }
 
-:host(:focus-within) {
+:host([outlined]:focus-within) {
     igc-input::part(suffix) {
         margin-inline-end: -1px;
     }
